# vtk-scene

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml  publish.yml
examples/: cone.py  data_viewer.py  grayscott.py  multi_view.py  multi_view_cell.py  pan3d_ats_demo.py  print_fields.py  remote_pflotran.py  rtdata.py
src/vtk_scene/: __init__.py  core.py  utils.py
src/vtk_scene/io/: __init__.py  core.py  decorator.py
src/vtk_scene/io/formats/: __init__.py  ex2.py  vti.py  vtkhdf.py  vtp.py  vtu.py
src/vtk_scene/lut/: __init__.py  core.py
src/vtk_scene/representations/: __init__.py  core.py  geometry.py
src/vtk_scene/views/: render_view.py
tests/: test_packages.py
